--- a/Week-0-Challenge/webpages/images.html
+++ b/Week-0-Challenge/webpages/images.html
@@ -1,17 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Image Search</title>
-
-    <link rel="stylesheet" href="images.css">
-
-</head>
-<body>
-    <script type="text/javascript">
-
-    </script>
-</body>
-</html>
+<DOCTYPE html>
+    <html lang="en">
+        <head>
+            <meta charset="UTF-8" />
+            <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+            <title>Google Images Search</title>
+            <!--I've used only a single css file-->
+            <link rel="stylesheet" href="week0challengestyle.css">
+        </head>
+        <body>
+            <button class="button1"><a href="week0challenge.html">Search</a></button><button class="button2"><a href="week0challengeadvancedsearch.html">Advanced Search</a></button>
+            <br><br><br><br><br><br><br><br><br>
+            <center>
+            <div class="logo">
+                <img src="googleimageslogo.png"><br><br>
+            </div>
+            <div>
+                <form action="http://images.google.com/images">
+                    <input type="text" name="q" id="searchbar"><br><br><br>
+                    <input type="submit" value="Google Images Search" id="search_button2"> 
+                </form>
+            </div>
+            </center>
+        </body>
+    </html>
+</DOCTYPE>
